--- a/src/server/templates/not-found.html
+++ b/src/server/templates/not-found.html
@@ -15,6 +15,12 @@
 
 <body>
     <div class="container">
+        Welcome to Coronacidades API!
+        Use it like:<br><br>
+        <code>http://datasource.coronacidades.org/br/cities/cases/full</code><br><br>
+        {{ query_parameters }}
+        <br>
+        
         <ul id="navigation">
             {% for end in endpoints %}
             <li>{{ end }}</a></li>
